tests/invalid/invalid_global_anno_in_local_context.csl
config InvalidGlobalLocal {
  a: string @deprecated("bad") @contain("csl");
}
